@@ -19,24 +19,16 @@
  *******************************************************************************/
 package org.eclipse.microprofile.lra.tck;
 
-import org.eclipse.microprofile.lra.annotation.LRAStatus;
-import org.eclipse.microprofile.lra.client.GenericLRAException;
-import org.eclipse.microprofile.lra.client.LRAClient;
-import org.eclipse.microprofile.lra.tck.spi.ManagementSPI;
-import org.eclipse.microprofile.lra.tck.participant.api.StandardController;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import static org.eclipse.microprofile.lra.tck.participant.api.LraController.ACCEPT_WORK;
+import static org.eclipse.microprofile.lra.tck.participant.api.LraController.LRA_CONTROLLER_PATH;
+import static org.eclipse.microprofile.lra.tck.participant.api.LraController.TRANSACTIONAL_WORK_PATH;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
-import javax.ws.rs.NotFoundException;
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.client.Client;
-import javax.ws.rs.client.ClientBuilder;
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.client.WebTarget;
-import javax.ws.rs.core.Response;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -45,398 +37,485 @@ import java.net.URLEncoder;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.logging.Logger;
 import java.util.stream.IntStream;
 
-import static org.eclipse.microprofile.lra.client.LRAClient.LRA_COORDINATOR_HOST_KEY;
-import static org.eclipse.microprofile.lra.client.LRAClient.LRA_COORDINATOR_PORT_KEY;
-import static org.eclipse.microprofile.lra.client.LRAClient.LRA_RECOVERY_PATH_KEY;
-import static org.eclipse.microprofile.lra.tck.participant.api.ActivityController.ACCEPT_WORK;
-import static org.eclipse.microprofile.lra.tck.participant.api.ActivityController.ACTIVITIES_PATH;
+import javax.inject.Inject;
+import javax.ws.rs.NotFoundException;
+import javax.ws.rs.WebApplicationException;
+import javax.ws.rs.client.Client;
+import javax.ws.rs.client.ClientBuilder;
+import javax.ws.rs.client.Entity;
+import javax.ws.rs.client.WebTarget;
+import javax.ws.rs.core.Response;
 
+import org.eclipse.microprofile.config.inject.ConfigProperty;
+import org.eclipse.microprofile.lra.annotation.LRAStatus;
+import org.eclipse.microprofile.lra.client.LRAClient;
+import org.eclipse.microprofile.lra.tck.participant.api.LraController;
+import org.eclipse.microprofile.lra.tck.participant.api.NoLRAController;
+import org.eclipse.microprofile.lra.tck.participant.api.Util;
+import org.eclipse.microprofile.lra.tck.spi.ManagementSPI;
+import org.jboss.arquillian.container.test.api.Deployment;
+import org.jboss.arquillian.junit.Arquillian;
+import org.jboss.shrinkwrap.api.ShrinkWrap;
+import org.jboss.shrinkwrap.api.asset.EmptyAsset;
+import org.jboss.shrinkwrap.api.spec.WebArchive;
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.Ignore;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.TestName;
+import org.junit.runner.RunWith;
+
+@RunWith(Arquillian.class)
 public class TckTests {
-    private static final Long LRA_TIMEOUT_MILLIS = 50000L;
-    private static URL micrserviceBaseUrl;
-    private static URL rcBaseUrl;
+    private static final Logger LOGGER = Logger.getLogger(TckTests.class.getName());
+    private final Long LRA_TIMEOUT_MILLIS = 50000L;
 
-    private static final int COORDINATOR_SWARM_PORT = 8082;
-    private static final int TEST_SWARM_PORT = 8080;
+    /**
+     * <p>
+     * Timeout factor which adjusts waiting time and timeouts for the TCK suite.
+     * <p>
+     * The default value is set to <code>1.0</code> which means the defined timeout
+     * is multiplied by <code>1</code>.
+     * <p>
+     * If you wish the test waits longer then set the value bigger than <code>1.0</code>.
+     * If you wish the test waits shorter time than designed
+     * or the timeout is elapsed faster then set the value less than <code>1.0</code> 
+     */
+    @Inject @ConfigProperty(name = "lra.tck.timeout.factor", defaultValue = "1.0")
+    private double timeoutFactor;
+    
+    /**
+     * Host name where LRA recovery is expected to be launch and TCK suite tries to connect to it at.
+     * The port is specifed by {@link #recoveryPort}.
+     */
+    @Inject @ConfigProperty(name = LRAClient.LRA_RECOVERY_HOST_KEY, defaultValue = "localhost")
+    private String recoveryHostName;
+    
+    /**
+     * Port where LRA recovery is expected to be launch and TCK suite tries to connect to it at.
+     * The hostname is specifed by {@link #recoveryHostName}.
+     */
+    @Inject @ConfigProperty(name = LRAClient.LRA_RECOVERY_PORT_KEY, defaultValue = "8080")
+    private int recoveryPort;
+    
+    /**
+     * Path where recovery is available to accept requests.
+     * The hostname of LRA recovery is specifed by {@link #recoveryHostName},
+     * the port of LRA recovery is defined by {@link #recoveryPort}.
+     */
+    @Inject @ConfigProperty(name = LRAClient.LRA_RECOVERY_PATH_KEY, defaultValue = "lra-recovery-coordinator")
+    private int recoveryPath;
 
-    private static final String RECOVERY_PATH_TEXT = "recovery";
-    private static final String PASSED_TEXT = "passed";
-    private static final String WORK_TEXT = "work";
+    /**
+     * Base URL of LRA suite is started at. It's URL where container exposes the test suite deployment.
+     * The test paths will be constructed based on this base URL.
+     * <p>
+     * The default base URL where TCK suite is expected to be started is <code>http://localhost:8180/</code>.
+     */
+    @Inject @ConfigProperty(name = "lra.tck.base.url", defaultValue = "http://localhost:8180/")
+    private String tckSuiteBaseUrl;
 
-    private static LRAClient lraClient;
-    private static ManagementSPI lraSPI;
-    private static Client msClient;
-    private static Client rcClient;
+    @Rule public TestName testName = new TestName();
 
-    private WebTarget msTarget;
+    @Inject
+    private LRAClient lraClient;
+
+    @Inject
+    private ManagementSPI lraManagement;
+
+    private static URL recoveryCoordinatorBaseUrl;
+    private static Client tckSuiteClient;
+    private static Client recoveryCoordinatorClient;
+
+    private WebTarget tckSuiteTarget;
     private WebTarget recoveryTarget;
 
-    private static List<LRAInfo> oldLRAs;
+    private static List<LRAInfo> notProperlyClosedLRAs = new ArrayList<>();
 
     private enum CompletionType {
         complete, compensate, mixed
     }
 
-    @BeforeClass
-    public static void beforeClass(LRAClient lraClient, ManagementSPI managementSPI) {
-        initTck(lraClient, managementSPI);
+    @Deployment(name = "tcktests", managed = true, testable = true)
+    public static WebArchive deploy() {
+        String archiveName = TckTests.class.getSimpleName().toLowerCase();
+        return ShrinkWrap
+            .create(WebArchive.class, archiveName + ".war")
+            .addPackages(true, "org.eclipse.microprofile.lra.tck")
+            .addAsManifestResource(EmptyAsset.INSTANCE, "beans.xml");
     }
-
-    public TckResult runTck(String testname, boolean verbose) {
-        TckResult run = new TckResult();
-
-        run.add("timeLimit", TckTests::timeLimit, verbose);
-        run.add("startLRA", TckTests::startLRA, verbose);
-        run.add("cancelLRA", TckTests::cancelLRA, verbose);
-        run.add("closeLRA", TckTests::closeLRA, verbose);
-        run.add("getActiveLRAs", TckTests::getActiveLRAs, verbose);
-        run.add("getAllLRAs", TckTests::getAllLRAs, verbose);
-        run.add("isActiveLRA", TckTests::isActiveLRA, verbose);
-        run.add("nestedActivity", TckTests::nestedActivity, verbose);
-        run.add("completeMultiLevelNestedActivity", TckTests::completeMultiLevelNestedActivity, verbose);
-        run.add("compensateMultiLevelNestedActivity", TckTests::compensateMultiLevelNestedActivity, verbose);
-        run.add("mixedMultiLevelNestedActivity", TckTests::mixedMultiLevelNestedActivity, verbose);
-        run.add("joinLRAViaHeader", TckTests::joinLRAViaHeader, verbose);
-        run.add("join", TckTests::join, verbose);
-        run.add("leaveLRA", TckTests::leaveLRA, verbose);
-        run.add("leaveLRAViaAPI", TckTests::leaveLRAViaAPI, verbose);
-        run.add("dependentLRA", TckTests::dependentLRA, verbose);
-        run.add("cancelOn", TckTests::cancelOn, verbose);
-        run.add("cancelOnFamily", TckTests::cancelOnFamily, verbose);
-        run.add("acceptTest", TckTests::acceptTest, verbose);
-        run.add("noLRATest", TckTests::noLRATest, verbose);
-
-        run.runTests(this, testname);
-
-        return run;
-    }
-
-    private static void initTck(LRAClient lraClient, ManagementSPI managementSPI) {
-        TckTests.lraClient = lraClient;
-        TckTests.lraSPI = managementSPI;
-
-        try {
-            if (Boolean.valueOf(System.getProperty("enablePause", "true"))) {
-                System.out.println("Getting ready to connect - expecting swarm lra coordinator is already up...");
-                Thread.sleep(1000);
-            }
-
-            int servicePort = Integer.getInteger("service.http.port", TEST_SWARM_PORT);
-            // TODO issue 42 will be removing these endpoint references
-            String rcHost = System.getProperty(LRA_COORDINATOR_HOST_KEY, "localhost");
-            String rcPath = System.getProperty(LRA_RECOVERY_PATH_KEY, "lra-recovery-coordinator");
-            int rcPort = Integer.getInteger(LRA_COORDINATOR_PORT_KEY, COORDINATOR_SWARM_PORT);
-
-            micrserviceBaseUrl = new URL(String.format("http://localhost:%d", servicePort));
-            rcBaseUrl = new URL(String.format("http://%s:%d/%s", rcHost, rcPort, rcPath));
-
-            msClient = ClientBuilder.newClient();
-            rcClient = ClientBuilder.newClient();
-
-            oldLRAs = new ArrayList<>();
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-    }
-
+    
     @AfterClass
     public static void afterClass() {
-        oldLRAs.clear();
-        lraClient.close();
-        msClient.close();
-        rcClient.close();
+        if(tckSuiteClient != null) {
+            tckSuiteClient.close();
+        }
+        if(recoveryCoordinatorClient != null) {
+            recoveryCoordinatorClient.close();
+        }
     }
 
     @Before
     public void before() {
+         setUpTestCase();
+
         try {
-            msTarget = msClient.target(URI.create(new URL(micrserviceBaseUrl, "/").toExternalForm()));
-            recoveryTarget = rcClient.target(URI.create(rcBaseUrl.toExternalForm()));
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
+            tckSuiteTarget = tckSuiteClient.target(URI.create(new URL(tckSuiteBaseUrl).toExternalForm()));
+        } catch (MalformedURLException mfe) {
+            throw new IllegalStateException("Cannot create URL for the LRA TCK suite base url " + tckSuiteBaseUrl, mfe);
         }
+        recoveryTarget = recoveryCoordinatorClient.target(URI.create(recoveryCoordinatorBaseUrl.toExternalForm()));
     }
 
     @After
     public void after() {
-        List<LRAInfo> activeLRAs = lraSPI.getLRAs(LRAStatus.Active);
+        List<LRAInfo> activeLRAs = lraManagement.getLRAs(LRAStatus.Active);
 
         if (activeLRAs.size() != 0) {
             activeLRAs.forEach(lra -> {
                 try {
-                    if (!oldLRAs.contains(lra)) {
-                        System.out.printf("%s: WARNING: test did not close %s%n", "testName.getMethodName()", lra.getLraId());
-                        oldLRAs.add(lra);
+                    if (!notProperlyClosedLRAs.contains(lra)) {
+                        LOGGER.warning(String.format(
+                                "<after test> %s: test did not close %s%n", testName.getMethodName(), lra.getLraId()));
+                        notProperlyClosedLRAs.add(lra);
                         lraClient.closeLRA(new URL(lra.getLraId()));
                     }
                 } catch (WebApplicationException | MalformedURLException e) {
-                    System.out.printf("After Test: exception %s closing %s%n", e.getMessage(), lra.getLraId());
+                    LOGGER.warning(String.format("<after test> %s: exception %s closing %s%n",
+                            testName.getMethodName(), e.getMessage(), lra.getLraId()));
                 }
             });
         }
-//        Current.popAll();
     }
 
+    /**
+     * Checking if coordinator is running, set ups the client to contact the recovery manager and the TCK suite itself.
+     */
+    private void setUpTestCase() {
+        if(recoveryCoordinatorBaseUrl != null) {
+            // we've already set up the recovery urls and REST clients for the tests
+            return;
+        }
+
+        try {
+            // TODO: what to do with this? recovery tests are valid?
+            recoveryCoordinatorBaseUrl = new URL(String.format("http://%s:%d/%s", recoveryHostName, recoveryPort, recoveryPath));
+
+            tckSuiteClient = ClientBuilder.newClient();
+            recoveryCoordinatorClient = ClientBuilder.newClient();
+        } catch (MalformedURLException e) {
+            throw new RuntimeException("Cannot properly setup the TCK tests (coordinator endpoint, testsuite endpoints...)", e);
+        }
+    }
+
+    // TODO: what's difference to closeLRA?
     @Test
-    private String startLRA() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#startLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    public void startLRA() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
         lraClient.closeLRA(lra);
-
-        return lra.toExternalForm();
     }
 
+    /**
+     * <p>
+     * Starting LRA and canceling it.
+     * <p>
+     * It's expected the LRA won't be listed in active LRAs when canceled.
+     */
     @Test
-    private String cancelLRA() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null,"SpecTest#cancelLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    public void cancelLRA() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null,lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
         lraClient.cancelLRA(lra);
 
-        List<LRAInfo> lras = lraSPI.getLRAs(null);
+        List<LRAInfo> allClientLRAs = lraManagement.getLRAs(null);
+        boolean isLraIdInList = containsLraId(allClientLRAs, lra);
 
-        assertNull(getLra(lras, lra.toExternalForm()), "cancelLRA via client: lra still active", null);
-
-        return lra.toExternalForm();
+        assertFalse("LRA '" + lra + "' should not be active anymore but was found in the list of all lras "
+            + allClientLRAs, isLraIdInList);
     }
 
+    /**
+     * <p>
+     * Starting LRA and closing it.
+     * <p>
+     * It's expected the LRA won't be listed in active LRAs when closed.
+     */
     @Test
-    private String closeLRA() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#closelLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    public void closeLRA() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
         lraClient.closeLRA(lra);
 
-        List<LRAInfo> lras = lraSPI.getLRAs(null);
+        List<LRAInfo> allClientLRAs = lraManagement.getLRAs(null);
+        boolean isLraIdInList = containsLraId(allClientLRAs, lra);
 
-        assertNull(getLra(lras, lra.toExternalForm()), "closeLRA via client: lra still active", null);
+        assertFalse("LRA '" + lra + "' should not be active anymore but was found in the list of all lras "
+                + allClientLRAs, isLraIdInList);
+    }
 
-        return lra.toExternalForm();
+    /**
+     * Started LRA should be listed amongst active LRAs.
+     */
+    @Test
+    public void getActiveLRAs() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
+
+        List<LRAInfo> allActiveLRAs = lraManagement.getLRAs(LRAStatus.Active);
+        boolean isLraIdInList = containsLraId(allActiveLRAs, lra);
+
+        assertTrue("LRA '" + lra + "' should be listed in the list of the active LRAs, as it was not closed yet",
+                isLraIdInList);
+
+        lraClient.closeLRA(lra);
+    }
+
+    /**
+     * Started LRA should be listed amongst active LRAs.
+     */
+    @Test
+    public void getAllLRAs() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
+
+        List<LRAInfo> allClientLRAs = lraManagement.getLRAs(null);
+        boolean isLraIdInList = containsLraId(allClientLRAs, lra);
+
+        assertTrue("LRA '" + lra + "' should be listed in the list of the all LRAs, as it was not closed yet, but it isn't",
+                isLraIdInList);
+
+        lraClient.closeLRA(lra);
     }
 
     @Test
-    private String getActiveLRAs() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#getActiveLRAs", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        List<LRAInfo> lras = lraSPI.getLRAs(null);
-
-        assertNotNull(getLra(lras, lra.toExternalForm()), "getActiveLRAs: getLra returned null", null);
-
-        lraClient.closeLRA(lra);
-
-        return lra.toExternalForm();
-    }
-
-    @Test
-    private String getAllLRAs() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#getAllLRAs", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        List<LRAInfo> lras = lraSPI.getLRAs(null);
-
-        assertNotNull(getLra(lras, lra.toExternalForm()), "getAllLRAs: getLra returned null", null);
-
-        lraClient.closeLRA(lra);
-
-        return PASSED_TEXT;
-    }
-
-    //    @Test
-    private void getRecoveringLRAs() throws WebApplicationException {
+    @Ignore
+    public void getRecoveringLRAs() throws WebApplicationException {
         // TODO
     }
 
+    /**
+     * Started LRA should be in state 'active'.
+     */
     @Test
-    private String isActiveLRA() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#isActiveLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    public void isActiveLRA() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
-        assertTrue(lraClient.getStatus(lra) == LRAStatus.Active, null, null, lra);
+        assertEquals("LRA '" + lra + "' is not denoted as active even it was started",
+                LRAStatus.Active, lraManagement.getStatus(lra));
 
         lraClient.closeLRA(lra);
-
-        return lra.toExternalForm();
     }
 
-    // the coordinator cleans up when canceled
+    /**
+     * Canceled LRA should be in state 'compensated'.
+     * NOTE: the coordinator cleans up when canceled
+     */
     @Test
-    private String isCompensatedLRA() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#isCompensatedLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    @Ignore
+    public void isCompensatedLRA() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
         lraClient.cancelLRA(lra);
 
-        assertTrue(lraClient.getStatus(lra) == LRAStatus.Cancelled, null, null, lra);
-
-        return lra.toExternalForm();
+        assertEquals("LRA '" + lra + "' is not denoted as compensated even it was canceled",
+                LRAStatus.Cancelled, lraManagement.getStatus(lra));
     }
 
-    // the coordinator cleans up when completed
+    /**
+     * Closed LRA should be in state 'completed'.
+     * NOTE: the coordinator cleans up when completed
+     */
     @Test
-    private String isCompletedLRA() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#isCompletedLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    @Ignore
+    public void isCompletedLRA() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
         lraClient.closeLRA(lra);
 
-        assertTrue(lraClient.getStatus(lra) == LRAStatus.Closed, null, null, lra);
-
-        return lra.toExternalForm();
+        assertEquals("LRA '" + lra + "' is not denoted as compensated even it was canceled",
+                LRAStatus.Closed, lraManagement.getStatus(lra));
     }
 
+    /**
+     * HTTP request to {@link LraController#activityWithLRA}
+     * which is a method annotated with {@link org.eclipse.microprofile.lra.annotation.LRA.Type#REQUIRED}.  
+     */
     @Test
-    private String joinLRAViaBody() throws WebApplicationException {
+    @Ignore
+    public void joinLRAViaBody() throws WebApplicationException {
 
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
         Response response = resourcePath.request().put(Entity.text(""));
 
-        String lra = checkStatusAndClose(response, Response.Status.OK.getStatusCode(), true, resourcePath);
+        String lraId = checkStatusReadAndClose(Response.Status.OK, response, resourcePath);
 
         // validate that the LRA coordinator no longer knows about lraId
-        List<LRAInfo> lras = lraSPI.getLRAs(LRAStatus.Active);
+        List<LRAInfo> activeLras = lraManagement.getLRAs(LRAStatus.Active);
+        boolean isLraIdInList = containsLraId(activeLras, lraId);
 
         // the resource /activities/work is annotated with Type.REQUIRED so the container should have ended it
-        assertNull(getLra(lras, lra), "joinLRAViaBody: lra is still active", resourcePath);
-
-        return PASSED_TEXT;
+        assertFalse("LRA work was processed and the annotated method finished but the LRA id '" + lraId + "'"
+            + "is still part of known active LRAs " + activeLras, isLraIdInList);
     }
 
     @Test
-    private String nestedActivity() throws WebApplicationException {
-        URL lra = lraClient.startLRA(null, "SpecTest#nestedActivity", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        WebTarget resourcePath = msTarget
-                .path(ACTIVITIES_PATH).path("nestedActivity");
+    public void nestedActivity() throws WebApplicationException {
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
+        WebTarget resourcePath = tckSuiteTarget
+                .path(LRA_CONTROLLER_PATH).path("nestedActivity");
 
-        Response response = resourcePath
-                .request()
-                .header(LRAClient.LRA_HTTP_HEADER, lra)
-                .put(Entity.text(""));
-
-        Object parentId = response.getHeaders().getFirst(LRAClient.LRA_HTTP_HEADER);
-
-        assertNotNull(parentId, "nestedActivity: null parent LRA", resourcePath);
-        assertEquals(lra.toExternalForm(), parentId, "nestedActivity should have returned the parent LRA", resourcePath);
-
-        String nestedLraId = checkStatusAndClose(response, Response.Status.OK.getStatusCode(), true, resourcePath);
-
-        // close the LRA
-        lraClient.closeLRA(lra);
-
-        // validate that the nested LRA was closed
-        List<LRAInfo> lras = lraSPI.getLRAs(LRAStatus.Active);
-
-        // the resource /activities/work is annotated with Type.REQUIRED so the container should have ended it
-        assertNull(getLra(lras, nestedLraId), "nestedActivity: nested LRA should not be active", resourcePath);
-
-        return lra.toExternalForm();
+        Response response = null;
+        try {
+            response = resourcePath
+                    .request()
+                    .header(LRAClient.LRA_HTTP_HEADER, lra)
+                    .put(Entity.text(""));
+    
+            assertEquals("Response status to ' " + resourcePath.getUri() + "' does not match.",
+                    Response.Status.OK.getStatusCode(), response.getStatus());
+    
+            Object parentId = response.getHeaders().getFirst(LRAClient.LRA_HTTP_HEADER);
+    
+            assertNotNull("Expecting to get parent LRA id as response from " + resourcePath.getUri(), parentId);
+            assertEquals("The nested activity should return the parent LRA id. The call to " + resourcePath.getUri(),
+                    parentId, lra.toExternalForm());
+    
+            String nestedLraId = response.readEntity(String.class);
+    
+            // close the LRA
+            lraClient.closeLRA(lra);
+    
+            // validate that the nested LRA was closed
+            List<LRAInfo> activeLras = lraManagement.getLRAs(LRAStatus.Active);
+            boolean isLraIdInList = containsLraId(activeLras, nestedLraId);
+    
+            // the resource /activities/work is annotated with Type.REQUIRED so the container should have ended it
+            assertFalse("Nested LRA id '" + lra + "' should be listed in the list of the active LRAs (from call to "
+                    + resourcePath.getUri() + ")", isLraIdInList);        
+        } finally {
+            if(response != null) {
+                response.close();
+            }
+        } 
     }
 
     @Test
-    private String completeMultiLevelNestedActivity() throws WebApplicationException {
-        return multiLevelNestedActivity(CompletionType.complete, 1);
+    public void completeMultiLevelNestedActivity() throws WebApplicationException {
+        multiLevelNestedActivity(CompletionType.complete, 1);
     }
 
     @Test
-    private String compensateMultiLevelNestedActivity() throws WebApplicationException {
-        return multiLevelNestedActivity(CompletionType.compensate, 1);
+    public void compensateMultiLevelNestedActivity() throws WebApplicationException {
+        multiLevelNestedActivity(CompletionType.compensate, 1);
     }
 
     @Test
-    private String mixedMultiLevelNestedActivity() throws WebApplicationException {
-        return multiLevelNestedActivity(CompletionType.mixed, 2);
+    public void mixedMultiLevelNestedActivity() throws WebApplicationException {
+        multiLevelNestedActivity(CompletionType.mixed, 2);
     }
 
     @Test
-    private String joinLRAViaHeader() throws WebApplicationException {
-        int cnt1 = completedCount(true);
+    public void joinLRAViaHeader() throws WebApplicationException {
+        int beforeCompletedCount = getCompletedCount();
 
-        URL lra = lraClient.startLRA(null, "SpecTest#joinLRAViaBody", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
         Response response = resourcePath
                 .request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         // validate that the LRA coordinator still knows about lraId
-        List<LRAInfo> lras = lraSPI.getLRAs(LRAStatus.Active);
-        assertNotNull(getLra(lras, lra.toExternalForm()), "joinLRAViaHeader: missing lra", resourcePath);
+        List<LRAInfo> allActiveLRAs = lraManagement.getLRAs(LRAStatus.Active);
+        boolean isLraIdInList = containsLraId(allActiveLRAs, lra);
+        assertTrue("LRA '" + lra + "' should be active as it is not closed yet. But it was not found in the list of active LRAs "
+                + allActiveLRAs, isLraIdInList);
 
         // close the LRA
         lraClient.closeLRA(lra);
 
         // check that LRA coordinator no longer knows about lraId
-        lras = lraSPI.getLRAs(LRAStatus.Active);
-        assertNull(getLra(lras, lra.toExternalForm()), "joinLRAViaHeader: LRA should not be active", resourcePath);
+        allActiveLRAs = lraManagement.getLRAs(LRAStatus.Active);
+        assertFalse("LRA '" + lra + "' should not be active anymore as it was closed yet. But it was not found amongst active LRAs "
+                + allActiveLRAs, containsLraId(allActiveLRAs, lra));
 
         // check that participant was told to complete
-        int cnt2 = completedCount(true);
-        assertEquals(cnt1 + 1, cnt2, "joinLRAViaHeader: wrong completion count", resourcePath);
-
-        return PASSED_TEXT;
+        int completedCount = getCompletedCount();
+        assertEquals("Wrong completion count for call " + resourcePath.getUri() + ". Expecting the method LRA was completed "
+                + "after joining the existing LRA " + lra, beforeCompletedCount + 1, completedCount);
     }
 
     @Test
-    private String join() throws WebApplicationException {
-        List<LRAInfo> lras = lraSPI.getLRAs(LRAStatus.Active);
+    public void join() throws WebApplicationException {
+        List<LRAInfo> lras = lraManagement.getLRAs(LRAStatus.Active);
         int count = lras.size();
-        URL lra = lraClient.startLRA(null, "SpecTest#join", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
         Response response = resourcePath
                 .request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
         lraClient.closeLRA(lra);
 
-        lras = lraSPI.getLRAs(LRAStatus.Active);
-        System.out.printf("join ok %d versus %d lras%n", count, lras.size());
-        assertEquals(count, lras.size(), "join: wrong LRA count", resourcePath);
-
-        return lra.toExternalForm();
+        lras = lraManagement.getLRAs(LRAStatus.Active);
+        assertEquals("Number of LRA instances before the test does not match current number of active LRAs. The joint LRA should be closed already. "
+                + "The test call went to LRA controller at " + resourcePath.getUri(), count, lras.size());
     }
 
     @Test
-    private String leaveLRA() throws WebApplicationException {
-        int cnt1 = completedCount(true);
-        URL lra = lraClient.startLRA(null, "SpecTest#leaveLRA", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+    public void leaveLRA() throws WebApplicationException {
+        int beforeCompletedCount = getCompletedCount();
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
         Response response = resourcePath.request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
 
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         // perform a second request to the same method in the same LRA context to validate that multiple participants are not registered
-        resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+        resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
         response = resourcePath.request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         // call a method annotated with @Leave (should remove the participant from the LRA)
-        resourcePath = msTarget.path(ACTIVITIES_PATH).path("leave");
+        resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("leave");
         response = resourcePath.request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         lraClient.closeLRA(lra);
 
         // check that participant was not told to complete
-        int cnt2 = completedCount(true);
+        int completedCount = getCompletedCount();
 
-        assertEquals(cnt1, cnt2, "leaveLRA: wrong completion count", resourcePath);
-
-        return lra.toExternalForm();
+        assertEquals("Wrong completion count when participant left the LRA. "
+                + "Expecting the completed count hasn't change between start and end of the test. "
+                + "The test call went to LRA controller at " + resourcePath.getUri(), beforeCompletedCount, completedCount);
     }
 
     @Test
-    private String leaveLRAViaAPI() throws WebApplicationException {
-        int cnt1 = completedCount(true);
-        URL lra = lraClient.startLRA(null, "SpecTest#leaveLRAViaAPI", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+    public void leaveLRAViaAPI() throws WebApplicationException {
+        int beforeCompletedCount = getCompletedCount();
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
 
         Response response = resourcePath.request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         // perform a second request to the same method in the same LRA context to validate that multiple participants are not registered
-        resourcePath = msTarget.path(ACTIVITIES_PATH).path(WORK_TEXT);
+        resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(TRANSACTIONAL_WORK_PATH);
         response = resourcePath.request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
 
         String recoveryUrl = response.getHeaderString(LRAClient.LRA_HTTP_RECOVERY_HEADER);        
         
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         // call a method annotated with @Leave (should remove the participant from the LRA)
         try {
-            resourcePath = msTarget.path(ACTIVITIES_PATH).path("leave");
+            resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("leave");
             response = resourcePath.path(URLEncoder.encode(lra.toString(), "UTF-8"))
                     .request()
                     .header(LRAClient.LRA_HTTP_HEADER, lra)
@@ -447,120 +526,104 @@ public class TckTests {
                     Response.status(Response.Status.INTERNAL_SERVER_ERROR).entity(
                             Entity.text(String.format("%s: %s", resourcePath.getUri().toString(), e.getMessage()))).build());
         }
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         lraClient.closeLRA(lra);
 
         // check that participant was not told to complete
-        int cnt2 = completedCount(true);
+        int completedCount = getCompletedCount();
 
-        assertEquals(cnt1, cnt2,
-                String.format("leaveLRAViaAPI: wrong count %d versus %d", cnt1, cnt2), resourcePath);
-
-        return PASSED_TEXT;
+        assertEquals("Wrong completion count when participant left the LRA by calling @Leave method. "
+                + "Expecting the completed count hasn't change between start and end of the test. "
+                + "The test call went to LRA controller at " + resourcePath.getUri(), beforeCompletedCount, completedCount);
     }
 
     @Test
-    private String dependentLRA() throws WebApplicationException {
+    public void dependentLRA() throws WebApplicationException, MalformedURLException {
         // call a method annotated with NOT_SUPPORTED but one which programatically starts an LRA and returns it via a header
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path("startViaApi");
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("startViaApi");
         Response response = resourcePath.request().put(Entity.text(""));
         // check that the method started an LRA
         Object lraHeader = response.getHeaders().getFirst(LRAClient.LRA_HTTP_HEADER);
 
-        String id = checkStatusAndClose(response, Response.Status.OK.getStatusCode(), true, resourcePath);
+        String lraId = checkStatusReadAndClose(Response.Status.OK, response, resourcePath);
 
         // the value returned via the header and body should be equal
 
-        assertNotNull(lraHeader, String.format("JAX-RS response to PUT request should have returned the header %s",
-                LRAClient.LRA_HTTP_HEADER), resourcePath);
-        assertNotNull(id, "JAX-RS response to PUT request should have returned content", resourcePath);
-        assertEquals(id, lraHeader.toString(), "dependentLRA: resource returned wrong LRA", resourcePath);
+        assertNotNull("JAX-RS response to PUT request should have returned the header " + LRAClient.LRA_HTTP_HEADER
+                + ". The test call went to " + resourcePath.getUri(), lraHeader);
+        assertNotNull("JAX-RS response to PUT request should have returned content of LRA id. The test call went to "
+                + resourcePath.getUri(), lraId);
+        assertEquals("The dependent LRA has to belong to the same LRA id. The test call went to " + resourcePath.getUri(),
+                lraId, lraHeader.toString());
 
-        try {
-            lraClient.closeLRA(new URL(lraHeader.toString()));
-        } catch (MalformedURLException e) {
-            throw new WebApplicationException(e);
-        }
-
-        return PASSED_TEXT;
+        lraClient.closeLRA(new URL(lraHeader.toString()));
     }
 
     @Test
-    private String cancelOn() {
+    public void cancelOn() {
         cancelCheck("cancelOn");
-
-        return PASSED_TEXT;
     }
 
     @Test
-    private String cancelOnFamily() {
+    public void cancelOnFamily() {
         cancelCheck("cancelOnFamily");
-
-        return PASSED_TEXT;
     }
 
     @Test
-    private String timeLimit() {
-        int[] cnt1 = {completedCount(true), completedCount(false)};
-        Response response = null;
+    public void timeLimit() {
+        int beforeCompletedCount = getCompletedCount();
+        int beforeCompensatedCount = getCompensatedCount();
+        
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("timeLimit");
+        Response response = resourcePath
+                .request()
+                .get();
 
-        try {
-            WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path("timeLimit");
-            response = resourcePath
-                    .request()
-                    .get();
+        response.close();
 
-            checkStatusAndClose(response, -1, true, resourcePath);
+        // Note that the timeout firing will cause the coordinator to compensate
+        // the LRA so it may no longer exist
+        // (depends upon how long the coordinator keeps a record of finished LRAs
 
-            // Note that the timeout firing will cause the coordinator to compensate
-            // the LRA so it may no longer exist
-            // (depends upon how long the coordinator keeps a record of finished LRAs
+        // check that participant was invoked
+        int completedCount = getCompletedCount();
+        int compensatedCount = getCompensatedCount();
 
-            // check that participant was invoked
-            int[] cnt2 = {completedCount(true), completedCount(false)};
-
-            /*
-             * The call to activities/timeLimit should have started an LRA which should have timed out
-             * (because the invoked resource method sleeps for longer than the timeLimit annotation
-             * attribute specifies). Therefore the participant should have compensated:
-             */
-            assertEquals(cnt1[0], cnt2[0],
-                    "timeLimit: complete was called instead of compensate", resourcePath);
-            assertEquals(cnt1[1] + 1, cnt2[1],
-                    "timeLimit: compensate should have been called", resourcePath);
-        } finally {
-
-            if (response != null) {
-                response.close();
-            }
-        }
-
-        return PASSED_TEXT;
+        /*
+         * The call to activities/timeLimit should have started an LRA which should have timed out
+         * (because the invoked resource method sleeps for longer than the timeLimit annotation
+         * attribute specifies). Therefore the participant should have compensated:
+         */
+        assertEquals("The LRA should have timed out but complete was called instead of compensate. "
+                + "Expecting the number of complete call before test matches the ones after LRA timed out. "
+                + "The test call went to " + resourcePath.getUri(), beforeCompletedCount, completedCount);
+        assertEquals("The LRA should have timed out and compensate should be called. "
+                + "Expecting the number of compensate call before test is one less lower than the ones after LRA timed out. "
+                + "The test call went to " + resourcePath.getUri(), beforeCompensatedCount + 1, compensatedCount);
     }
 
     /*
      * Participants can pass data during enlistment and this data will be returned during
      * the complete/compensate callbacks
      */
+    // TODO: is this test to be run?
     private void testUserData() {
-        List<LRAInfo> lras = lraSPI.getLRAs(LRAStatus.Active);
-        int count = lras.size();
+        List<LRAInfo> beforeActiveLRAs = lraManagement.getLRAs(LRAStatus.Active);
         String testData = "test participant data";
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path("testUserData");
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("testUserData");
 
         Response response = resourcePath
                 .request().put(Entity.text(testData));
 
-        String activityId = response.readEntity(String.class);
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        String activityId = checkStatusReadAndClose(Response.Status.OK, response, resourcePath);
 
-        lras = lraSPI.getLRAs(LRAStatus.Active);
+        List<LRAInfo> activeLRAs = lraManagement.getLRAs(LRAStatus.Active);
 
-        assertEquals(count, lras.size(), "testUserData: testUserData produced the wrong LRA count",
-                resourcePath);
+        assertEquals("produced the wrong LRA count on call of method " + resourcePath.getUri(),
+                beforeActiveLRAs.size(), activeLRAs.size());
 
-        response = msTarget.path(ACTIVITIES_PATH).path("getActivity")
+        response = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("getActivity")
                 .queryParam("activityId", activityId)
                 .request()
                 .get();
@@ -568,27 +631,25 @@ public class TckTests {
         String activity = response.readEntity(String.class);
 
         // validate that the service received the correct data during the complete call
-        assertTrue(activity.contains("userData='" + testData), null, null, null);
-        assertTrue(activity.contains("endData='" + testData), null, null, null);
+        assertTrue("service should receive userData field during complete call", activity.contains("userData='" + testData));
+        assertTrue("service should receive endData field during complete call", activity.contains("endData='" + testData));
     }
 
     @Test
-    private String acceptTest() throws WebApplicationException {
-        joinAndEnd(true, true, ACTIVITIES_PATH, ACCEPT_WORK);
-        return PASSED_TEXT;
+    public void acceptTest() throws WebApplicationException {
+        joinAndEnd(true, true, LRA_CONTROLLER_PATH, ACCEPT_WORK);
     }
 
     // TODO the spec does not specifiy recovery semantics
-    @Test
     private void joinAndEnd(boolean waitForRecovery, boolean close, String path, String path2) throws WebApplicationException {
-        int countBefore = lraSPI.getLRAs(LRAStatus.Active).size();
-        URL lra = lraClient.startLRA(null, "SpecTest#join", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        WebTarget resourcePath = msTarget.path(path).path(path2);
+        int beforeActiveLRACount = lraManagement.getLRAs(LRAStatus.Active).size();
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
+        WebTarget resourcePath = tckSuiteTarget.path(path).path(path2);
 
         Response response = resourcePath
                 .request().header(LRAClient.LRA_HTTP_HEADER, lra).put(Entity.text(""));
 
-        checkStatusAndClose(response, Response.Status.OK.getStatusCode(), false, resourcePath);
+        checkStatusAndClose(Response.Status.OK, response, resourcePath);
 
         if (close) {
             lraClient.closeLRA(lra);
@@ -599,137 +660,130 @@ public class TckTests {
         if (waitForRecovery) {
             // trigger a recovery scan which trigger a replay attempt on any participants
             // that have responded to complete/compensate requests with Response.Status.ACCEPTED
-            resourcePath = recoveryTarget.path(RECOVERY_PATH_TEXT);
+            resourcePath = recoveryTarget.path("recovery");
             Response response2 = resourcePath
                     .request().get();
 
-            checkStatusAndClose(response2, Response.Status.OK.getStatusCode(), false, resourcePath);
+            checkStatusAndClose(Response.Status.OK, response2, resourcePath);
         }
 
-        int countAfter = lraSPI.getLRAs(LRAStatus.Active).size();
+        int activeLRACount = lraManagement.getLRAs(LRAStatus.Active).size();
 
-        assertEquals(countBefore, countAfter, "joinAndEnd: some LRAs were not recovered", resourcePath);
+        assertEquals("Expecting all LRAs were recovered and the number of active LRAs before test matches the number after. "
+                + "The test call went to " + resourcePath.getUri(),
+                beforeActiveLRACount, activeLRACount);
     }
 
     @Test
-    private String noLRATest() throws WebApplicationException {
-        WebTarget resourcePath = msTarget
-                .path(StandardController.ACTIVITIES_PATH3)
-                .path(StandardController.NON_TRANSACTIONAL_WORK);
+    public void noLRATest() throws WebApplicationException {
+        WebTarget resourcePath = tckSuiteTarget
+                .path(NoLRAController.NO_LRA_CONTROLLER_PATH)
+                .path(NoLRAController.NON_TRANSACTIONAL_WORK_PATH);
 
-        int[] cnt1 = {completedCount(true), completedCount(false)};
-        URL lra = lraClient.startLRA(null, "SpecTest#noLRATest",
-                LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+        int beforeCompletedCount = getCompletedCount();
+        int beforeCompensatedCount = getCompensatedCount();
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
 
         Response response = resourcePath.request().header(LRAClient.LRA_HTTP_HEADER, lra)
                 .put(Entity.text(""));
 
-        String result = checkStatusAndClose(response, Response.Status.OK.getStatusCode(),
-                true, resourcePath);
+        String lraId = checkStatusReadAndClose(Response.Status.OK, response, resourcePath);
 
-        assertEquals(result, lra.toExternalForm(), "service returned the wrong LRA", null);
+        assertEquals("While calling non-LRA method the controller returns not expected LRA id",
+                lraId, lra.toExternalForm());
 
         lraClient.cancelLRA(lra);
 
         // check that second service (the LRA aware one), namely
         // {@link org.eclipse.microprofile.lra.tck.participant.api.ActivityController#activityWithMandatoryLRA(String, String)}
         // was told to compensate
-        int[] cnt2 = {completedCount(true), completedCount(false)};
+        int completedCount = getCompletedCount();
+        int compensatedCount = getCompensatedCount();
 
-        assertEquals(cnt1[0], cnt2[0], "complete should not have been called", resourcePath);
-        assertEquals(cnt1[1] + 1, cnt2[1], "compensate should have been called", resourcePath);
-
-        return PASSED_TEXT;
+        assertEquals("Complete should not be called on the LRA aware service. "
+                + "The number of completed count for before and after test does not match. "
+                + "The test call went to " + resourcePath.getUri(), beforeCompletedCount, completedCount);
+        assertEquals("Compensate service should be called on LRA aware service. The number of compensated count after test is bigger for one. "
+                + "The test call went to " + resourcePath.getUri(), beforeCompensatedCount + 1, compensatedCount);
     }
 
+    // TODO: is this test to be run?
     private void renewTimeLimit() {
-        int[] cnt1 = {completedCount(true), completedCount(false)};
-        Response response = null;
+        int beforeCompletedCount = getCompletedCount();
+        int beforeCompensatedCount = getCompensatedCount();
 
-        try {
-            WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH)
-                    .path("renewTimeLimit");
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH)
+                .path("renewTimeLimit");
 
-            response = resourcePath
-                    .request()
-                    .get();
+        Response response = resourcePath
+                .request()
+                .get();
 
-            checkStatusAndClose(response, -1, true, resourcePath);
+        response.close();
 
-            // check that participant was invoked
-            int[] cnt2 = {completedCount(true), completedCount(false)};
+        // check that participant was invoked
+        int completedCount = getCompletedCount();
+        int compensatedCount = getCompensatedCount();
 
-            /*
-             * The call to activities/timeLimit should have started an LRA whch should not have timed out
-             * (because the called resource method renews the timeLimit before sleeping for longer than
-             * the timeLimit annotation attribute specifies).
-             * Therefore the participant should not have compensated:
-             */
-            assertEquals(cnt1[0] + 1, cnt2[0],
-                    resourcePath.getUri().toString() + ": compensate was called instead of complete", resourcePath);
-            assertEquals(cnt1[1], cnt2[1],
-                    resourcePath.getUri().toString() + ": compensate should not have been called", resourcePath);
-        } finally {
-            if (response != null) {
-                response.close();
-            }
-        }
+        /*
+         * The call to activities/timeLimit should have started an LRA whch should not have timed out
+         * (because the called resource method renews the timeLimit before sleeping for longer than
+         * the timeLimit annotation attribute specifies).
+         * Therefore the participant should not have compensated:
+         */
+        assertEquals("Compensate was called instead of complete. The test call went to " + resourcePath.getUri(),
+                beforeCompletedCount + 1, completedCount);
+        assertEquals("Compensate should not have been called. The test call went to " + resourcePath.getUri(),
+                beforeCompensatedCount, compensatedCount);
     }
 
-    private String checkStatusAndClose(Response response, int expected, boolean readEntity, WebTarget webTarget) {
+    private void checkStatusAndClose(Response.Status expectedStatus, Response response, WebTarget resourcePath) {
         try {
-            if (expected != -1 && response.getStatus() != expected) {
-                if (webTarget != null) {
-                    throw new WebApplicationException(String.format("%s: expected status %d got %d",
-                            webTarget.getUri().toString(), expected, response.getStatus()), response);
-                }
-
-                throw new WebApplicationException(response);
-            }
-
-            if (readEntity) {
-                return response.readEntity(String.class);
-            }
+            assertEquals("Not expected status at call '" + resourcePath.getUri() + "'",
+                    expectedStatus.getStatusCode(), response.getStatus());
         } finally {
             response.close();
         }
-
-        return null;
     }
 
-    private int completedCount(boolean completed) {
-        Response response = null;
-        String path = completed ? "completedactivitycount" : "compensatedactivitycount";
-
+    private String checkStatusReadAndClose(Response.Status expectedStatus, Response response, WebTarget resourcePath) {
         try {
-            WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(path);
-
-            response = resourcePath.request().get();
-
-            assertEquals(Response.Status.OK.getStatusCode(),
-                    response.getStatus(),
-                    resourcePath.getUri().toString() + ": wrong status",
-                    resourcePath);
-
-            return Integer.parseInt(response.readEntity(String.class));
+            assertEquals("Response status on call to '" + resourcePath.getUri() + "' failed to match.",
+                    expectedStatus.getStatusCode(), response.getStatus());
+            return response.readEntity(String.class);
         } finally {
-            if (response != null) {
-                response.close();
-            }
+            response.close();
         }
-
     }
 
-    private String multiLevelNestedActivity(CompletionType how, int nestedCnt) throws WebApplicationException {
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path("multiLevelNestedActivity");
+    private int getCompletedCount() {
+        return getActivityCount("completedactivitycount");
+    }
 
-        int[] cnt1 = {completedCount(true), completedCount(false)};
+    private int getCompensatedCount() {
+        return getActivityCount("compensatedactivitycount");
+    }
+
+    private int getActivityCount(String activityCountTargetPath) {
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH)
+                .path(activityCountTargetPath);
+
+        Response response = resourcePath.request().get();
+        String count = checkStatusReadAndClose(Response.Status.OK, response, resourcePath);
+        return Integer.parseInt(count);
+    }
+
+    private void multiLevelNestedActivity(CompletionType how, int nestedCnt) throws WebApplicationException {
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path("multiLevelNestedActivity");
+
+        int beforeCompletedCount = getCompletedCount();
+        int beforeCompensatedCount = getCompensatedCount();
 
         if (how == CompletionType.mixed && nestedCnt <= 1) {
             how = CompletionType.complete;
         }
 
-        URL lra = lraClient.startLRA(null, "SpecTest#multiLevelNestedActivity", LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
+        URL lra = lraClient.startLRA(null, lraClientId(), lraTimeout(), ChronoUnit.MILLIS);
         String lraId = lra.toString();
 
         Response response = resourcePath
@@ -738,10 +792,11 @@ public class TckTests {
                 .header(LRAClient.LRA_HTTP_HEADER, lra)
                 .put(Entity.text(""));
 
-        String lraStr = checkStatusAndClose(response, Response.Status.OK.getStatusCode(), true, resourcePath);
+        String lraStr = checkStatusReadAndClose(Response.Status.OK, response, resourcePath);
+        assertNotNull("expecting a LRA string returned from " + resourcePath.getUri(), lraStr);
         assert lraStr != null;
         String[] lraArray = lraStr.split(",");
-        final List<LRAInfo> lras = lraSPI.getLRAs(LRAStatus.Active);
+        final List<LRAInfo> lras = lraManagement.getLRAs(LRAStatus.Active);
         URL[] urls = new URL[lraArray.length];
 
         IntStream.range(0, urls.length).forEach(i -> {
@@ -753,24 +808,30 @@ public class TckTests {
             }
         });
         // check that the multiLevelNestedActivity method returned the mandatory LRA followed by any nested LRAs
-        assertEquals(nestedCnt + 1, lraArray.length, "multiLevelNestedActivity: step 1", resourcePath);
-        assertEquals(lraId, lraArray[0], "multiLevelNestedActivity: step 2", resourcePath); // first element should be the mandatory LRA
+        assertEquals("multiLevelNestedActivity: step 1 (the test call went to " + resourcePath.getUri() + ")",
+                nestedCnt + 1, lraArray.length);
+        // first element should be the mandatory LRA
+        assertEquals("multiLevelNestedActivity: step 2 (the test call went to " + resourcePath.getUri() + ")",
+                lraId, lraArray[0]);
 
         // check that the coordinator knows about the two nested LRAs started by the multiLevelNestedActivity method
         // NB even though they should have completed they are held in memory pending the enclosing LRA finishing
-        IntStream.rangeClosed(1, nestedCnt).forEach(i -> assertNotNull(getLra(lras, lraArray[i]),
-                " missing nested LRA: step 2b",
-                resourcePath));
+        IntStream.rangeClosed(1, nestedCnt).forEach(i -> assertTrue("missing nested LRA: step 2b (path called " + resourcePath + ")",
+                containsLraId(lras, lraArray[i])));
 
         // and the mandatory lra seen by the multiLevelNestedActivity method
-        assertNotNull(getLra(lras, lraArray[0]), "lra should have been found", resourcePath);
+        assertTrue("lra should have been found (path called " + resourcePath.getUri() + ")",
+                containsLraId(lras, lraArray[0]));
 
-        int[] cnt2 = {completedCount(true), completedCount(false)};
+        int inMiddleCompletedCount = getCompletedCount();
+        int inMiddleCompensatedCount = getCompensatedCount();
 
         // check that all nested activities were told to complete
-        assertEquals(cnt1[0] + nestedCnt, cnt2[0], "multiLevelNestedActivity: step 3", resourcePath);
+        assertEquals("multiLevelNestedActivity: step 3 (called test path " + resourcePath.getUri() + ")",
+                beforeCompletedCount + nestedCnt, inMiddleCompletedCount);
         // and that neither were told to compensate
-        assertEquals(cnt1[1], cnt2[1], "multiLevelNestedActivity: step 4", resourcePath);
+        assertEquals("multiLevelNestedActivity: step 4 (called test path " + resourcePath.getUri() + ")",
+                beforeCompensatedCount, inMiddleCompensatedCount);
 
         // close the LRA
         if (how == CompletionType.compensate) {
@@ -797,18 +858,22 @@ public class TckTests {
         }
 
         // validate that the top level and nested LRAs are gone
-        final List<LRAInfo> lras2 = lraSPI.getLRAs(LRAStatus.Active);
+        final List<LRAInfo> lras2 = lraManagement.getLRAs(LRAStatus.Active);
 
-        IntStream.rangeClosed(0, nestedCnt).forEach(i -> assertNull(getLra(lras2, lraArray[i]),
-                        "multiLevelNestedActivity: top level or nested activity still active", resourcePath));
+        IntStream.rangeClosed(0, nestedCnt).forEach(i -> assertFalse(
+                "multiLevelNestedActivity: top level or nested activity still active (called path " + resourcePath.getUri() + ")",
+                containsLraId(lras2, lraArray[i])));
 
-        int[] cnt3 = {completedCount(true), completedCount(false)};
+        int afterCompletedCount = getCompletedCount();
+        int afterCompensatedCount = getCompensatedCount();
 
         if (how == CompletionType.complete) {
             // make sure that all nested activities were not told to complete or cancel a second time
-            assertEquals(cnt2[0] + nestedCnt, cnt3[0], "multiLevelNestedActivity: step 5", resourcePath);
+            assertEquals("multiLevelNestedActivity: step 5 (called test path " + resourcePath.getUri() + ")",
+                    inMiddleCompletedCount + nestedCnt, afterCompletedCount);
             // and that neither were still not told to compensate
-            assertEquals(cnt1[1], cnt3[1], "multiLevelNestedActivity: step 6", resourcePath);
+            assertEquals("multiLevelNestedActivity: step 6 (called test path " + resourcePath.getUri() + ")",
+                    beforeCompensatedCount, afterCompensatedCount);
 
         } else if (how == CompletionType.compensate) {
             /*
@@ -819,9 +884,11 @@ public class TckTests {
              * which will then tell L2 to compenstate (ie the compensate count is incrememted again)
              */
             // each nested participant should have completed (the +nestedCnt)
-            assertEquals(cnt1[0] + nestedCnt, cnt3[0], "multiLevelNestedActivity: step 7", resourcePath);
+            assertEquals("multiLevelNestedActivity: step 7 (called test path " + resourcePath.getUri() + ")",
+                    beforeCompletedCount + nestedCnt, afterCompletedCount);
             // each nested participant should have compensated. The top level enlistement should have compensated (the +1)
-            assertEquals(cnt2[1] + 1 + nestedCnt, cnt3[1], "multiLevelNestedActivity: step 8", resourcePath);
+            assertEquals("multiLevelNestedActivity: step 8 (called test path " + resourcePath.getUri() + ")",
+                    inMiddleCompensatedCount + 1 + nestedCnt, afterCompensatedCount);
         } else {
             /*
              * The test is calling for a mixed uutcome:
@@ -829,99 +896,72 @@ public class TckTests {
              * - one of the nested LRAs was compensated the rest should have been completed
              */
             // there should be just 1 compensation (the first nested LRA)
-            assertEquals(1, cnt3[1] - cnt1[1], "multiLevelNestedActivity: step 9", resourcePath);
+            assertEquals("multiLevelNestedActivity: step 9 (called test path " + resourcePath.getUri() + ")",
+                    1, afterCompensatedCount - beforeCompensatedCount);
             /*
              * Expect nestedCnt + 1 completions, 1 for the top level and one for each nested LRA
              * (NB the first nested LRA is completed and compensated)
              * Note that the top level complete should not call complete again on the nested LRA
              */
-            assertEquals(nestedCnt + 1, cnt3[0] - cnt1[0], "multiLevelNestedActivity: step 10", resourcePath);
+            assertEquals("multiLevelNestedActivity: step 10 (called test path " + resourcePath.getUri() + ")",
+                    nestedCnt + 1, afterCompletedCount - beforeCompletedCount);
         }
-
-        return PASSED_TEXT;
     }
 
     private void cancelCheck(String path) {
-        int[] cnt1 = {completedCount(true), completedCount(false)};
-        URL lra = lraClient.startLRA(null, "SpecTest#" + path, LRA_TIMEOUT_MILLIS, ChronoUnit.MILLIS);
-        Response response = null;
+        int beforeCompletedCount = getCompletedCount();
+        int beforeCompensatedCount = getCompensatedCount();
 
-        WebTarget resourcePath = msTarget.path(ACTIVITIES_PATH).path(path);
+        URL lra = lraClient.startLRA(null, "SpecTest#" + path, lraTimeout(), ChronoUnit.MILLIS);
+
+        WebTarget resourcePath = tckSuiteTarget.path(LRA_CONTROLLER_PATH).path(path);
+
+        Response response = resourcePath
+                .request()
+                .header(LRAClient.LRA_HTTP_HEADER, lra)
+                .get();
+
+        checkStatusReadAndClose(Response.Status.BAD_REQUEST, response, resourcePath);
+
+        // check that participant was invoked
+        int completedCount = getCompletedCount();
+        int compensatedCount = getCompensatedCount();
+
+        // check that complete was not called and that compensate was
+        assertEquals("complete was called instead of compensate (called to " + resourcePath.getUri() + ")",
+                beforeCompletedCount, completedCount);
+        assertEquals("compensate should have been called (called to " + resourcePath.getUri() + ")",
+                beforeCompensatedCount + 1, compensatedCount);
 
         try {
-            response = resourcePath
-                    .request()
-                    .header(LRAClient.LRA_HTTP_HEADER, lra)
-                    .get();
-
-            checkStatusAndClose(response, Response.Status.BAD_REQUEST.getStatusCode(), true, resourcePath);
-
-            // check that participant was invoked
-            int[] cnt2 = {completedCount(true), completedCount(false)};
-
-            // check that complete was not called and that compensate was
-            assertEquals(cnt1[0], cnt2[0], "complete was called instead of compensate", resourcePath);
-            assertEquals(cnt1[1] + 1, cnt2[1], "compensate should have been called", resourcePath);
-
-            try {
-                assertTrue(lraClient.getStatus(lra) != LRAStatus.Active, "cancelCheck: LRA should have been cancelled", resourcePath, lra);
-            } catch (NotFoundException ignore) {
-                // means the LRA has gone
-            }
-        } finally {
-            if (response != null) {
-                response.close();
-            }
+            assertNotEquals("LRA '" + lra + "' should have been cancelled (called to " + resourcePath.getUri() + ")",
+                    LRAStatus.Active, lraManagement.getStatus(lra));
+        } catch (NotFoundException ignore) {
+            // means the LRA has gone
         }
     }
 
-    private static LRAInfo getLra(List<LRAInfo> lras, String lraId) {
-        for (LRAInfo lraInfo : lras) {
-            if (lraInfo.getLraId().equals(lraId)) {
-                return lraInfo;
-            }
-        }
-
-        return null;
+    private boolean containsLraId(List<LRAInfo> lras, URL lraIdURL) {
+        String lraId = lraIdURL.toExternalForm();
+        return containsLraId(lras, lraId);
     }
 
-    private static void assertTrue(boolean condition, String reason, WebTarget target, URL lra) {
-//        assert condition;
-
-        if (!condition) {
-            throw new GenericLRAException(lra, 0, target.getUri().toString() + ": " + reason, null);
-        }
+    private boolean containsLraId(List<LRAInfo> lras, String lraId) {
+        return lras.stream().anyMatch(lrainfo -> lrainfo.getLraId().equals(lraId));
     }
 
-    private static <T> void assertEquals(T expected, T actual, String reason, WebTarget target) {
-//        assert expected.equals(actual);
-
-        if (!expected.equals(actual)) {
-            throw new GenericLRAException(null, 0, target.getUri().toString() + ": " + reason, null);
-        }
-    }
-    private static void fail(String msg) {
-        System.out.printf("%s%n", msg);
-        assert false;
+    /**
+     * The started LRA will be named based on the class name and the running test name.
+     */
+    private String lraClientId() {
+        return this.getClass().getSimpleName() + "#" + testName.getMethodName();
     }
 
-    private static <T> void assertNotNull(T value, String reason, WebTarget target) {
-        if (value == null) {
-            if (target == null) {
-                throw new GenericLRAException(null, 0, reason, null);
-            } else {
-                throw new GenericLRAException(null, 0, target.getUri().toString() + reason, null);
-            }
-        }
-    }
-
-    private static <T> void assertNull(T value, String reason, WebTarget target) {
-        if (value != null) {
-            if (target == null) {
-                throw new GenericLRAException(null, 0, reason, null);
-            } else {
-                throw new GenericLRAException(null, 0, target.getUri().toString() + reason, null);
-            }
-        }
+    /**
+     * Adjusting the default timeout by the specified timeout factor
+     * which can be defined by user.
+     */
+    private long lraTimeout() {
+        return Util.adjust(LRA_TIMEOUT_MILLIS, timeoutFactor);
     }
 }
